force-app/main/default/objects/Sites__c/fields/Auto_Assign_Secondary_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assign_Secondary_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Assign Secondary Vendor</label>
    <type>Checkbox</type>
</CustomField>