force-app/main/default/objects/Sites__c/fields/BrandUser__c.field-meta.xml
<CustomField>
    <fullName>BrandUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User with brand profile who has access to this site</description>
    <label>Brand User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a user with Brand Profile</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Brand Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Brand_User_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>