force-app/main/default/objects/Sites__c/fields/CorpUser__c.field-meta.xml
<CustomField>
    <fullName>CorpUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>