force-app/main/default/objects/Sites__c/fields/Ext__c.field-meta.xml
<CustomField>
    <fullName>Ext__c</fullName>
    <label>Ext.</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>