force-app/main/default/objects/Sites__c/fields/External_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Site_ID__c</fullName>
    <label>External Site ID</label>
    <type>TextArea</type>
</CustomField>