force-app/main/default/objects/Sites__c/fields/External_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Site_Name__c</fullName>
    <label>External Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>