force-app/main/default/objects/Sites__c/fields/External_Site_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Site_Source__c</fullName>
    <label>External Site Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Channel</fullName>
            </value>
            <value>
                <fullName>Fexa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>