force-app/main/default/objects/Sites__c/fields/Isleased__c.field-meta.xml
<CustomField>
    <fullName>Isleased__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Isleased</label>
    <type>Checkbox</type>
</CustomField>