force-app/main/default/objects/Sites__c/fields/Landlord_email__c.field-meta.xml
<CustomField>
    <fullName>Landlord_email__c</fullName>
    <label>Landlord email</label>
    <type>Email</type>
</CustomField>