force-app/main/default/objects/Sites__c/fields/Landlord_name__c.field-meta.xml
<CustomField>
    <fullName>Landlord_name__c</fullName>
    <label>Landlord Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>