force-app/main/default/objects/Sites__c/fields/Landlord_phone__c.field-meta.xml
<CustomField>
    <fullName>Landlord_phone__c</fullName>
    <label>Landlord phone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>