force-app/main/default/objects/Sites__c/fields/Manager_Contact__c.field-meta.xml
<CustomField>
    <fullName>Manager_Contact__c</fullName>
    <label>Manager Contact</label>
    <type>Phone</type>
</CustomField>