force-app/main/default/objects/Sites__c/fields/Opening_date__c.field-meta.xml
<CustomField>
    <fullName>Opening_date__c</fullName>
    <label>Opening date</label>
    <type>DateTime</type>
</CustomField>