force-app/main/default/objects/Sites__c/fields/Primary_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>