force-app/main/default/objects/Sites__c/fields/Restricted_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Vendors__c</fullName>
    <label>Restricted Vendors</label>
    <type>TextArea</type>
</CustomField>