force-app/main/default/objects/Sites__c/fields/Secondary_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Sites (Secondary Vendor)</relationshipLabel>
    <relationshipName>Sites1</relationshipName>
    <type>Lookup</type>
</CustomField>