force-app/main/default/objects/Sites__c/fields/Site_Email__c.field-meta.xml
<CustomField>
    <fullName>Site_Email__c</fullName>
    <label>Site Email</label>
    <type>Email</type>
</CustomField>