force-app/main/default/objects/Sites__c/fields/Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Number__c</fullName>
    <label>Site Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>