force-app/main/default/objects/Sites__c/fields/Site_User__c.field-meta.xml
<CustomField>
    <fullName>Site_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User with site user profile who has access to this site</description>
    <label>Site User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a user with Site Profile</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Site Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Users</relationshipName>
    <type>Lookup</type>
</CustomField>