force-app/main/default/objects/Sites__c/fields/Tertiary_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tertiary Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Sites (Vendor)</relationshipLabel>
    <relationshipName>Sites2</relationshipName>
    <type>Lookup</type>
</CustomField>